--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -7793,7 +7793,8 @@
    "source": [
     "test_taste['first_taste'].fillna(value = 0, inplace = True)\n",
     "test_taste['second_taste'].fillna(value = 0, inplace = True)\n",
-    "test_taste['third_taste'].fillna(value = 0, inplace = True)"
+    "test_taste['third_taste'].fillna(value = 0, inplace = True)\n",
+    "test_taste['fourth_taste'].fillna(value = 0, inplace = True)"
    ]
   },
   {
@@ -7814,7 +7815,8 @@
    "source": [
     "test_taste['binFirst_taste'] = test_taste['first_taste'].apply(taste)\n",
     "test_taste['binSecond_taste'] = test_taste['second_taste'].apply(taste)\n",
-    "test_taste['binThird_taste'] = test_taste['third_taste'].apply(taste)"
+    "test_taste['binThird_taste'] = test_taste['third_taste'].apply(taste)\n",
+    "test_taste['binFourth_taste'] = test_taste['fourth_taste'].apply(taste)"
    ]
   },
   {
@@ -8053,7 +8055,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_taste['count_tastes'] = test_taste['binFirst_taste'] + test_taste['binSecond_taste'] + test_taste['binThird_taste']"
+    "test_taste['count_tastes'] = test_taste['binFirst_taste'] + test_taste['binSecond_taste'] + test_taste['binThird_taste'] + test_taste['binFourth_taste']"
    ]
   },
   {
@@ -9705,7 +9707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
