hover parameter in choose chocolate

--- a/DV_notebook.ipynb
+++ b/DV_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,6 @@
     "import dash\n",
     "from dash import Dash, dcc, html, Input, Output\n",
     "import plotly.express as px\n",
-    "import plotly.express as px\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.graph_objs as go\n",
     "from plotly.offline import plot\n",
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +119,7 @@
        "4      AI  18.220554 -63.068615              Anguilla"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +246,7 @@
        "4        Polynesia          9.0             61.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +404,7 @@
        "4  2.677301e+07              8  Weight in kilograms  2.677301e+07  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -514,7 +513,7 @@
        "149  Import    1606.0       2729.0  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +577,7 @@
        "Name: company_location, dtype: object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -607,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +626,7 @@
        "Name: country_of_bean_origin, Length: 177, dtype: object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -656,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +672,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -763,7 +762,7 @@
        "4      AI  18.220554 -63.068615              Anguilla"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -775,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +949,7 @@
        "[488 rows x 5 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -962,19 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var1=np.asarray(data1[data1.rating <= data1.rating.quantile(.25)]['cocoa_percent'],dtype=np.float32)\n",
-    "var2=np.asarray(data1[(data1.rating > data1.rating.quantile(.25)) & (data1.rating <= data1.rating.quantile(.50))]['cocoa_percent'],dtype=np.float32)\n",
-    "var3=np.asarray(data1[(data1.rating > data1.rating.quantile(.50)) & (data1.rating <= data1.rating.quantile(.75))]['cocoa_percent'],dtype=np.float32)\n",
-    "var4=np.asarray(data1[data1.rating > data1.rating.quantile(.75)]['cocoa_percent'],dtype=np.float32)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1092,7 +1079,7 @@
        "149  Import    1606.0       2729.0  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1112,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "scrolled": true
    },
@@ -1243,7 +1230,7 @@
        "110     Western Asia     AM  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1255,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1270,7 +1257,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1281,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1403,7 +1390,7 @@
        "4    1606.0       2729.0  Albania    Europe  Southern Europe     AL  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1415,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1636,7 +1623,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1648,7 +1635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,7 +1644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1666,7 +1653,7 @@
        "Index(['Africa', 'Americas', 'Asia', 'Europe', 'Oceania'], dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4779,7 +4766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4798,7 +4785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4830,12 +4817,12 @@
     "                                    min=42,\n",
     "                                    max=100,\n",
     "                                    value=[70, 80],\n",
-    "                                    marks={'50%': '50',\n",
-    "                                        '60%': '60',\n",
-    "                                        '70%': '70',\n",
-    "                                        '80%': '80',\n",
-    "                                        '90%': '90',\n",
-    "                                        '100%': '100'},\n",
+    "                                    marks={'50': '50',\n",
+    "                                            '60': '60',\n",
+    "                                            '70': '70',\n",
+    "                                            '80': '80',\n",
+    "                                            '90': '90',\n",
+    "                                            '100': '100'},\n",
     "                                    step=1\n",
     "                                )]),\n",
     "            \n",
@@ -4909,24 +4896,27 @@
     "filtered=data\n",
     "filtered=filtered[filtered.isin(['have_sugar']).any(1)] \n",
     "filtered=filtered[filtered.isin(['have_not_vanila']).any(1)] \n",
-    "filtered = filtered[(filtered['cocoa_percent'] >= 20) & (filtered['cocoa_percent'] <= 50)]\n",
+    "filtered = filtered[(filtered['cocoa_percent'] >= 60) & (filtered['cocoa_percent'] <= 90)]\n",
     "\n",
     "maxi=np.max(filtered['rating'])\n",
-    "#filtered1=filtered#[filtered['rating']==maxi]\n",
     "\n",
-    "filtered['color_max'] = np.where((filtered.rating == maxi), 1, 0)\n",
-    "filtered=filtered.sort_values(by=['color_max'],ascending=False)\n",
-    "filtered=filtered.head(40)\n",
+    "filtered['color_max'] = np.where((filtered['rating'] == maxi), 1, 0)\n",
+    "filtered=filtered.sort_values(by=['color_max'], ascending=False)\n",
+    "\n",
+    "filtered=filtered.head(20)\n",
     "\n",
     "initial_weights=filtered.rating.to_list()\n",
     "words = filtered.company.to_list()\n",
+    "ratings = filtered.rating.to_list()\n",
+    "countries=filtered.company_location.to_list()\n",
     "\n",
     "w_max= max(initial_weights)\n",
     "w_min=min(initial_weights)\n",
     "upper=15\n",
     "lower=4\n",
+    "\n",
     "if (w_max-w_min) ==0:\n",
-    "    weights=[upper for x in initial_weights]\n",
+    "    weights=[upper for x in initial_weights] \n",
     "else:\n",
     "    weights=[lower+((x-w_min)*(upper-lower))/(w_max-w_min) for x in initial_weights]\n",
     "\n",
@@ -4934,30 +4924,46 @@
     "colors = [plotly.colors.DEFAULT_PLOTLY_COLORS[1] for i in range(nr_companies)]\n",
     "colors.extend(plotly.colors.DEFAULT_PLOTLY_COLORS[7] for i in range(len(filtered)-nr_companies))\n",
     "\n",
+    "if len(filtered)>1:\n",
+    "    group_=pd.DataFrame(filtered[filtered['rating']==maxi].groupby(by=['company'])['rating'].mean().sort_values(ascending=False))\n",
+    "    name_company=str(group_.index[0])\n",
+    "    rating=str(group_.head(1)['rating'].values[0])\n",
+    "    country=str(filtered[filtered['company']==name_company].company_location.values[0])\n",
+    "    \n",
+    "elif filtered.empty:\n",
+    "    name_company = 'No company was found'\n",
+    "    rating = 'No rating was found'\n",
+    "    country= 'No country was found'\n",
+    "    \n",
+    "else:\n",
+    "    name_company=str(filtered.head(1)['company'].values[0])\n",
+    "    rating=str(filtered.head(1)['rating'].values[0])\n",
+    "    country=str(filtered.head(1)['company_location'].values[0])\n",
+    "\n",
     "data_inter = go.Scatter(x=random.choices(range(2000), k=len(filtered)),\n",
     "                        y=random.choices(range(2000), k=len(filtered)),\n",
     "                        mode='text',\n",
     "                        text=words,\n",
     "                        marker={'opacity': 0.3},\n",
-    "                        textfont={'size': weights,\n",
-    "                                'color': colors})\n",
+    "                        textfont={'size': weights, 'color': colors},\n",
+    "                        hovertext=['Rating:'+str(f)+'; Country:' + str(p) for f, p in zip(ratings, countries)],\n",
+    "                        hoverinfo='text'\n",
+    "                        )\n",
     "\n",
     "layout_1 = go.Layout({'xaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False},\n",
-    "                    'yaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False}}\n",
-    "                     )\n",
+    "        'yaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False}} )\n",
     "\n",
+    "fig = go.Figure(data=[data_inter], layout=layout_1,)\n",
     "\n",
-    "fig = go.Figure(data=[data_inter], layout=layout_1)\n",
-    "\n",
-    "fig.update_layout(paper_bgcolor='rgba(0,0,0,0)',\n",
-    "    plot_bgcolor='rgba(0,0,0,0)', title='Word Cloud', )\n",
+    "fig.update_layout(paper_bgcolor='rgba(0,0,0,0)', plot_bgcolor='rgba(0,0,0,0)', title='Word Cloud')\n",
+    "    \n",
     "\n",
     "plot(fig)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -4968,8 +4974,8 @@
       "\n",
       " * Serving Flask app '__main__' (lazy loading)\n",
       " * Environment: production\n",
-      "   WARNING: This is a development server. Do not use it in a production deployment.\n",
-      "   Use a production WSGI server instead.\n",
+      "\u001b[31m   WARNING: This is a development server. Do not use it in a production deployment.\u001b[0m\n",
+      "\u001b[2m   Use a production WSGI server instead.\u001b[0m\n",
       " * Debug mode: on\n"
      ]
     }
@@ -4988,33 +4994,46 @@
     "def update_graph(drop_id,percent_id):\n",
     "    \n",
     "    filtered=data\n",
+    "    \n",
     "    for each in drop_id:\n",
     "        filtered=filtered[filtered.isin([each]).any(1)] \n",
     "    \n",
     "    filtered = filtered[(filtered['cocoa_percent'] >= percent_id[0]) & (filtered['cocoa_percent'] <= percent_id[1])]\n",
-    "\n",
-    "    # maxi=np.max(filtered['rating'])\n",
-    "    # filtered=filtered[filtered['rating']==maxi]\n",
-    "    \n",
-    "\n",
-    "    weights = filtered.rating.to_list()*100\n",
+    "    maxi=np.max(filtered['rating'])\n",
+    "   \n",
+    "    filtered['color_max'] = np.where((filtered['rating'] == maxi), 1, 0)\n",
+    "    filtered=filtered.sort_values(by=['color_max'], ascending=False)\n",
+    " \n",
+    "    group_=filtered[filtered['rating']==maxi].groupby(by=['company'])['rating'].mean().sort_values(ascending=False)\n",
+    "    filtered=filtered.head(20)\n",
+    "    ratings = filtered.rating.to_list()\n",
+    "    countries=filtered.company_location.to_list()\n",
+    "    initial_weights=filtered.rating.to_list()\n",
     "    words = filtered.company.to_list()\n",
-    "    colors = [plotly.colors.DEFAULT_PLOTLY_COLORS[random.randrange(1, 10)] for i in range(len(filtered.company.to_list()))]\n",
     "\n",
-    "    data_inter = go.Scatter(x=[random.random() for i in range(200)],\n",
-    "                            y=[random.random() for i in range(200)],\n",
-    "                            mode='text',\n",
-    "                            text=words,\n",
-    "                            marker={'opacity': 0.3},\n",
-    "                            textfont={'size': weights,\n",
-    "                                    'color': colors})\n",
+    "    w_max= max(initial_weights)\n",
+    "    w_min=min(initial_weights)\n",
+    "    upper=15\n",
+    "    lower=4\n",
+    "    \n",
+    "    if (w_max-w_min) ==0:\n",
+    "        weights=[upper for x in initial_weights] \n",
+    "    else:\n",
+    "        weights=[lower+((x-w_min)*(upper-lower))/(w_max-w_min) for x in initial_weights]\n",
     "\n",
-    "    layout_1 = go.Layout({'xaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False},\n",
-    "                        'yaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False}})\n",
-    "\n",
-    "    fig = go.Figure(data=[data_inter], layout=layout_1)\n",
-    "\n",
-    "    if filtered.empty:\n",
+    "    nr_companies=len(filtered[filtered['color_max']==1])\n",
+    "    colors = [plotly.colors.DEFAULT_PLOTLY_COLORS[1] for i in range(nr_companies)]\n",
+    "    colors.extend(plotly.colors.DEFAULT_PLOTLY_COLORS[7] for i in range(len(filtered)-nr_companies))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    if len(filtered)>1:\n",
+    "        group_=pd.DataFrame(filtered[filtered['rating']==maxi].groupby(by=['company'])['rating'].mean().sort_values(ascending=False))\n",
+    "        name_company=str(group_.index[0])\n",
+    "        rating=str(group_.head(1)['rating'].values[0])\n",
+    "        country=str(filtered[filtered['company']==name_company].company_location.values[0])\n",
+    "    \n",
+    "    elif filtered.empty:\n",
     "        name_company = 'No company was found'\n",
     "        rating = 'No rating was found'\n",
     "        country= 'No country was found'\n",
@@ -5023,6 +5042,25 @@
     "        name_company=str(filtered.head(1)['company'].values[0])\n",
     "        rating=str(filtered.head(1)['rating'].values[0])\n",
     "        country=str(filtered.head(1)['company_location'].values[0])\n",
+    "        \n",
+    "        \n",
+    "    data_inter = go.Scatter(x=random.choices(range(2000), k=len(filtered)),\n",
+    "                            y=random.choices(range(2000), k=len(filtered)),\n",
+    "                            mode='text',\n",
+    "                            text=words,\n",
+    "                            marker={'opacity': 0.3},\n",
+    "                            textfont={'size': weights, 'color': colors},\n",
+    "                            hovertext=['Rating: '+str(f)+'; Country: ' + str(p) for f, p in zip(ratings, countries)],\n",
+    "                            hoverinfo='text')\n",
+    "                                  #'Country' + str(filtered[filtered['company']==i]['company_location'].values[0] for i in words)\n",
+    "                                \n",
+    "\n",
+    "    layout_1 = go.Layout({'xaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False},\n",
+    "            'yaxis': {'showgrid': False, 'showticklabels': False, 'zeroline': False}} )\n",
+    "    \n",
+    "    fig = go.Figure(data=[data_inter], layout=layout_1)\n",
+    "\n",
+    "    fig.update_layout(paper_bgcolor='rgba(0,0,0,0)', plot_bgcolor='rgba(0,0,0,0)', title='Word Cloud')\n",
     "    \n",
     "    return name_company ,  \\\n",
     "           rating , \\\n",
